--- a/styles/utilitys.css
+++ b/styles/utilitys.css
@@ -36,6 +36,10 @@
     display: none;
 }
 
+.hide-modal {
+    display: none;
+}
+
 @media (width >= 80em) {
     .container {
         --max-width: 1280px;
