--- a/styles/app.css
+++ b/styles/app.css
@@ -66,7 +66,7 @@
         }
 
         & .tasks-container {
-            margin-block: 4rem;
+            margin-top: 4rem;
 
             & .task {
                 background-color: var(--background-secondary);
@@ -130,7 +130,9 @@
             color: var(--background-secondary);
             font: var(--label);
             padding: 1.2rem;
+            margin-top: 4rem;
             border-radius: 1.2rem;
+            animation: desappear 1s both;
 
             & > img {
                 margin-right: .8rem;
@@ -149,6 +151,12 @@
                 }
             }
         }
+    }
+}
+
+@keyframes desappear {
+    100% {
+        opacity: 0;
     }
 }
 
